@@ -123,6 +123,11 @@
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
+  <module id="evolution">
+    <cvs-directory>evolution/help</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
   <module id="fast-user-switch-applet">
     <cvs-directory>fast-user-switch-applet/help</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
