@@ -1,3 +1,7 @@
+2006-11-22  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* modules.xml: Add evolution.
+
 2006-11-04  Christophe Bliard  <christophe.bliard@trux.info>
 
 	* modules.xml: Add gthumb
